# auto-swing

./: .gitignore  .gitmodules  AI_FSM_CRITIQUE.md  Blink.ino  Makefile  README.md  blink.cpp  blob.cpp  blob.hpp
.github/workflows/: arduino.yml
doc/: DSP.md  Devlog.md  Docker.md  Flashing.md  Serial.md  Test.md
libraries/autoswinglib/: keywords.txt  library.properties
libraries/autoswinglib/src/: autoswinglib.cpp  autoswinglib.hpp
py/: .gitignore  README.md  data0.csv  data1.csv  data2.csv  data3.csv  plot0.py
py/sigmath/: sigmath.py
src/: fixed_iir.cpp  fixed_iir.hpp  mycontrol.cpp  mycontrol.hpp  mydsp.cpp  mydsp.hpp  myfsm.cpp  myfsm.hpp  mylib.cpp  mylib.hpp  myposition.cpp  myposition.hpp  myprintf.cpp  myprintf.hpp
test/: CMakeLists.txt  test_control_fsm.cpp  test_fsm.cpp
